# cmake-template

./: CMakeLists.txt
src/: CMakeLists.txt  foo.h  main.cc
test/: CMakeLists.txt  foo_test.cc
